Fix code overflow issue

--- a/src/style/enfield.css
+++ b/src/style/enfield.css
@@ -152,6 +152,7 @@ pre {
   padding: 1rem;
   line-height: 1.4;
   background-color: #f8f8f8;
+  overflow: auto;
 }
 pre code {
   padding: 0;
